--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8888
-security.oauth2.resource.id=http://localhost:8888
+security.oauth2.resource.id=https://vue-spring-kotlin-graphql-back.herokuapp.com
 security.oauth2.resource.jwk.keySetUri=https://sample-apps.auth0.com/.well-known/jwks.json
